MDEV-33508 Performance regression due to frequent scan of full buf_pool.flush_list

buf_flush_page_cleaner(): Remove a loop that had originally been added
in commit 9d1466522ea92963ac6ca16b597392714280c9f1 (MDEV-32029) and made
redundant by commit 5b53342a6a59ae1141b2a46467954fc3836f8e80 (MDEV-32588).

Starting with commit d34479dc664d4cbd4e9dad6b0f92d7c8e55595d1 (MDEV-33053)
this loop would cause a significant performance regression in workloads
where buf_pool.need_LRU_eviction() constantly holds in
buf_flush_page_cleaner().

Thanks to Steve Shaw of Intel for noticing this.

Reviewed by: Debarun Banerjee
Tested by: Matthias Leich